# property_menu_builder

./: Cargo.toml  build.rs
fonts/: menu-builder.toml
src/: action.rs  choice_groups.rs  data_types.rs  entity_component.rs  icon.rs  item_groups.rs  items.rs  main.rs  multiwindow.rs  persistence.rs  price_levels.rs  printer_logicals.rs  product_classes.rs  report_categories.rs  revenue_categories.rs  security_levels.rs  settings.rs  superedit.rs  tax_groups.rs
src/choice_groups/: edit.rs  view.rs
src/item_groups/: edit.rs  view.rs
src/items/: edit.rs  export_items.rs  import_items.rs  prepare_export.rs  prepare_exports2.rs  preview_changes.rs  superedit.rs  view.rs
src/price_levels/: edit.rs  view.rs
src/printer_logicals/: edit.rs  view.rs
src/product_classes/: edit.rs  view.rs
src/report_categories/: edit.rs  view.rs
src/revenue_categories/: edit.rs  view.rs
src/security_levels/: edit.rs  view.rs
src/tax_groups/: edit.rs  view.rs
