[package]
name = "property_menu_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["advanced", "debug", "tokio"] }
iced_modern_theme = "0.1.0"
rust_decimal = "1.36"
strsim = "0.11.1"
rangemap = "1.5"
serde = { version="1.0", features = ["derive"] }
ron = "0.8"
directories = "6.0.0"
chrono = "0.4"
rfd = { version = "*", default-features = false, features = ["tokio"] }
futures = "0.3"

[build-dependencies]
iced_fontello = "0.13"

[target.'cfg(windows)'.dependencies]
image = "0.25.5"