[package]
name = "property_menu_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["advanced", "debug", "tokio"] }
iced_modern_theme = { git = "https://github.com/KainTwinam/iced-modern-theme.git" }
rust_decimal = "1.36"
strsim = "0.11.1"
rangemap = "1.5"
serde = { version="1.0", features = ["derive"] }
ron = "0.8"
directories = "6.0.0"
chrono = "0.4"
rfd = { version = "*", default-features = false, features = ["tokio"] }
tokio = { version = "1.45.0", features = ["fs"]}
futures = "0.3"
csv = "1.3.1"
thiserror = "2.0.12"
serde_json = "1.0.140"

[build-dependencies]
iced_fontello = "0.13"

[target.'cfg(windows)'.dependencies]
image = "0.25.5"